--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "http-server",
-    "test": "http-server",
-    "build": "webpack",
-    "dev": "webpack --watch & http-server"
+    "test": "node build",
+    "build": "node build",
+    "dev": "nodemon build & http-server"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,8 @@
   "author": "bRuttaZz",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^3.1.9",
     "http-server": "^14.1.1",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4"
+    "nodemon": "^3.1.0"
   }
 }
