--- a/facts/projects.json
+++ b/facts/projects.json
@@ -9,6 +9,14 @@
             "coverimage": "https://raw.githubusercontent.com/bRuttaZz/devc/main/assets/tad.png"
         },
         {
+            "name": "STMP",
+            "shortInfo": "STMP: Sitty Talky Messaging Protocol : A primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with your office mates over LAN!",
+            "source": "https://github.com/bRuttaZz/stmp",
+            "license": "MIT",
+            "link": "https://github.com/bRuttaZz/stmp",
+            "coverimage": "https://github.com/bRuttaZz/stmp/raw/main/.assets/logo.png"
+        },
+        {
             "name": "Colbaking",
             "shortInfo": "Nothing but an old school chrome-dino-game clone!",
             "source": "https://github.com/bruttazz/colbaking",
