--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "http-server": "^14.1.1",
+    "markdown-it": "^14.1.0",
     "nodemon": "^3.1.0"
   }
 }
