--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "license": "MIT",
   "dependencies": {
     "ejs": "^3.1.9",
+    "highlight.js": "^11.9.0",
     "http-server": "^14.1.1",
+    "jsdom": "^24.1.0",
     "markdown-it": "^14.1.0",
     "nodemon": "^3.1.0"
   }
