--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "http-server",
     "test": "node _source/build-src/index.js",
     "build": "node _source/build-src/index.js",
-    "dev": "nodemon -e js,ejs,json _source/build-src/index.js & http-server"
+    "dev": "nodemon -e js,ejs,json,md _source/build-src/index.js & http-server"
   },
   "repository": {
     "type": "git",
