--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
+      - name: Install Build Deps
+        run: npm install
       - name: Build
         run: npm run build
       - name: Setup Pages
