--- a/writings/configs/projects.json
+++ b/writings/configs/projects.json
@@ -23,6 +23,15 @@
       "link": "https://brutt.site/run-unni",
       "coverimage": "https://raw.githubusercontent.com/bRuttaZz/run-unni/refs/heads/main/assets/logo.png"
     },
+    "vanillacorn": {
+      "name": "Vanillacorn",
+      "shortInfo": "A single-file, multi-worker ASGI server (spec 2.5) written in vanilla Python — all in one file, with HTTP, WebSocket, and TLS support.",
+      "detailedInfo": "A simple implementation of the ASGI specification 2.5 (2024-06-05) using pure Python and asyncio (Py3.9 or above). The system is meant to use zero external libraries and contained in a single file, because why not...?",
+      "source": "https://github.com/bRuttaZz/vanillacorn",
+      "license": "GPLv3",
+      "link": "https://github.com/bRuttaZz/vanillacorn",
+      "coverimage": "https://raw.githubusercontent.com/bRuttaZz/vanillacorn/refs/heads/main/misc/logo.png"
+    },
     "cerve": {
       "name": "cerve",
       "shortInfo": "A multi-worker HTTP server written in C. Nothing too special, just another personal project of mine!",
