--- a/new_builder/writings/blogs/10.we-love-superheros-and-it-s-cool/meta.yml
+++ b/new_builder/writings/blogs/10.we-love-superheros-and-it-s-cool/meta.yml
@@ -1,4 +1,4 @@
-title: We Love Superheroes and It’s Cool! Something About Our Economy.
+title: We Love Superheroes and It's Cool! Something About Our Economy.
 shortDescription: Decoding our greedy business idea, it turns out our love for
   superheroes are a good thing.
 longDescription: Decoding our greedy business idea, it turns out our love for
