--- a/new_builder/writings/configs/about.yml
+++ b/new_builder/writings/configs/about.yml
@@ -9,6 +9,20 @@ jobFirmUrl: https://www.knowbe4.com/?ref=brutt.site
 
 spotifyProfile: https://open.spotify.com/user/31nfl5znljrwp4r5v4a3pcingxam
 
+description: Agraj P Das (@bRUttaZz)! A software enthusiast. My little space in the internet!
+keywords:
+  - agraj
+  - agrajpdas
+  - bruttazz
+  - brutt
+  - bruttsite
+  - brutt.site
+  - aboutme
+  - about
+  - self
+  - info
+  - person
+
 contacts:
   email: mailto:agrajpdas@gmail.com
   matrix: https://matrix.to/#/@bruttazz:matrix.org
