update now everything rocks

--- a/writings/blogs/1.ai-and-tribe/meta.yml
+++ b/writings/blogs/1.ai-and-tribe/meta.yml
@@ -20,7 +20,7 @@ keyWords:
   - chat-gpt
   - LLM
   - GPTs
-shareImage: https://brutt.site/assets/blog/1.ai-and-tribe/spiderman-picking-side.jpg
+shareImage: https://brutt.site/assets/blogs/1.ai-and-tribe/spiderman-picking-side.jpg
 
 # lastEdit overwride if not provided will using git commit
 lastEdit: 2025/02/26
