--- a/writings/blogs/10.we-love-superheros-and-it-s-cool/meta.yml
+++ b/writings/blogs/10.we-love-superheros-and-it-s-cool/meta.yml
@@ -14,7 +14,7 @@ keyWords:
   - evolution
   - capitalism
   - socialism
-shareImage: https://brutt.site/assets/blog/10.we-love-superheros-and-it-s-cool/guardians-of-galaxy.jpg
+shareImage: https://brutt.site/assets/blogs/10.we-love-superheros-and-it-s-cool/guardians-of-galaxy.jpg
 
 # override
 lastEdit: "2025/09/07"
