--- a/writings/blogs/11.life-is-no-a-function-of-time/meta.yml
+++ b/writings/blogs/11.life-is-no-a-function-of-time/meta.yml
@@ -19,7 +19,7 @@ keyWords:
   - randomness
   - entropy
   - second law
-shareImage: https://brutt.site/assets/blog/11.life-is-no-a-function-of-time/laplace-deamon.jpg
+shareImage: https://brutt.site/assets/blogs/11.life-is-no-a-function-of-time/laplace-deamon.jpg
 
 # override
 lastEdit: "2025/02/26"
