--- a/writings/blogs/12.reverse-proxy-in-python/meta.yml
+++ b/writings/blogs/12.reverse-proxy-in-python/meta.yml
@@ -12,7 +12,7 @@ keyWords:
   - proxy-in-python
   - ws-proxying
   - websocket
-shareImage: https://brutt.site/assets/blog/12.reverse-proxy-in-python/py.nginx.png
+shareImage: https://brutt.site/assets/blogs/12.reverse-proxy-in-python/py.nginx.png
 
 # override
 lastEdit: "2025/02/24"
