--- a/writings/configs/about.yml
+++ b/writings/configs/about.yml
@@ -24,7 +24,8 @@ keywords:
   - person
 
 contacts:
-  email: mailto:agrajpdas@gmail.com
+  email: mailto:bruttazz@disroot.org
+  xmpp: xmpp:bruttazz@disroot.org
   matrix: https://matrix.to/#/@bruttazz:matrix.org
   mastodon: https://fosstodon.org/@bRuttaZz
   github: https://github.com/bruttazz
