just a filter and tag thigs to blogs page

--- a/writings/blogs/1.ai-and-tribe/meta.yml
+++ b/writings/blogs/1.ai-and-tribe/meta.yml
@@ -1,4 +1,5 @@
 title: Picking Sides! A thought on AI
+tag: random
 shortDescription: How big our tribe can grow? Will it ever include AI
 longDescription: After exhausting our little heads with these questions, we left
   it there! And it felt good to be human, with all of these evolutionary
