--- a/writings/blogs/11.life-is-no-a-function-of-time/meta.yml
+++ b/writings/blogs/11.life-is-no-a-function-of-time/meta.yml
@@ -1,4 +1,5 @@
 title: "Good thing is: Life is not a univariate function of time, or is it?"
+tag: science
 shortDescription: Just a super simplified yet reasonable proof that Laplace's
   demon can not be real.
 longDescription: Just a super simplified yet reasonable proof that Laplace's
