new scribble in town

--- a/writings/configs/about.yml
+++ b/writings/configs/about.yml
@@ -30,3 +30,4 @@ contacts:
   mastodon: https://fosstodon.org/@bRuttaZz
   github: https://github.com/bruttazz
   linkedin: https://www.linkedin.com/in/agraj-p-das
+  instagram: https://www.instagram.com/bruttazz/
